// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Mistakes Render with 1 mistakes 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Render Mistakes Render without mistakes 1`] = `
<div
  className="game__mistakes"
/>
`;
